--- a/lib/app/css/_styleguide_mixins.css
+++ b/lib/app/css/_styleguide_mixins.css
@@ -14,7 +14,7 @@
 /* We need to denite fonts separatedly to every element since we do not want to pollute previews */
 /* with inherited styles */
 @define-mixin default-font {
-  font-family: $primary-font;
+  font-family: var(--primary-font);
   font-size: 14px;
   line-height: 1.45;
   color: #222;
