--- a/lib/app/css/styleguide_helper_elements.css
+++ b/lib/app/css/styleguide_helper_elements.css
@@ -96,8 +96,8 @@ table.sg {
     border-right: 1px solid #ccc;
     border-collapse: collapse;
 
-    th,
-    td {
+    & th,
+    & td {
         text-align: left;
         border-left: 1px solid #ccc;
         border-bottom: 1px solid #ccc;
